refactor - wheel of fortune SEO

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skratchville Games</title>
+    <link rel="icon" href="/src/assets/Skratchville.png" type="image/x-icon" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/tamazm/skratchgames/main/src/components/WheelOfFortune/assets/mockup.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:title" content="Skratchville Games" />
+    <meta property="og:description" content="Skratchville Demo Games" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://skratchville.com" />
   </head>
   <body>
     <div id="root"></div>
