fix - result screen toggle and change og image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skratchville Games</title>
     <link rel="icon" href="/src/assets/Skratchville.png" type="image/x-icon" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/tamazm/skratchgames/main/src/components/WheelOfFortune/assets/mockup.png" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1200740864192938006/1264212237686407218/9k.png?ex=66ab8d65&is=66aa3be5&hm=273d29f82a1b8d76341035748f32fc2c863f311e31841bad7a6edde6ac4386c3&=&format=webp&quality=lossless&width=421&height=421" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:title" content="Skratchville Games" />
